aggiunta annotazione lista

--- a/project.html
+++ b/project.html
@@ -31,13 +31,13 @@
 	<a name="phases-info">
 	<div id="container" bot-intent = "phases_info" bot-type="reader" bot-keys="phases, steps, progress" bot-intent-desc="Tell you the steps of the project">
 		<h1 bot-attribute=title>Project progress</h1>
-		<ul>
-			<li><strong>March 2019:</strong> Start of the project</li>
-			<li><strong>April 2019:</strong> Definition of the architecture of the system</li>
-			<li><strong>July 2019:</strong> Selection of the software technologies to use for implementation</li>
-			<li><strong>September 2019:</strong> Start of the implementation phase</li>
-			<li><strong>November 2019:</strong> First prototype ready</li>
-			<li><strong>January 2020:</strong> Paper submitted to ICWE</li>
+		<ul bot-attribute="list">
+			<li bot-attribute="list-item"><strong>March 2019:</strong> Start of the project</li>
+			<li bot-attribute="list-item"><strong>April 2019:</strong> Definition of the architecture of the system</li>
+			<li bot-attribute="list-item"><strong>July 2019:</strong> Selection of the software technologies to use for implementation</li>
+			<li bot-attribute="list-item"><strong>September 2019:</strong> Start of the implementation phase</li>
+			<li bot-attribute="list-item"><strong>November 2019:</strong> First prototype ready</li>
+			<li bot-attribute="list-item"><strong>January 2020:</strong> Paper submitted to ICWE</li>
 		</ul>
 
 <!--
