main container fill height, text justify

--- a/template1/index.html
+++ b/template1/index.html
@@ -16,7 +16,7 @@
 <!-- Page Content -->
 
   <!-- Navigation bar -->
-  <div class="container" style="background-color: white;">
+  <div class="container" style="background-color: white; min-height: 100vh">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
       <div class="container">
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -48,7 +48,7 @@
       
       <div class="col-md-8">
         <h3 class="my-3">Abstract</h3>
-        <p>This paper introduces what we call conversational web browsing, i.e., a dialog-based, natural language interaction with websites. The goal is to enable users to access content and functionality accessible through rendered UIs by ``talking to websites'' instead of by operating 
+        <p class="text-justify">This paper introduces what we call conversational web browsing, i.e., a dialog-based, natural language interaction with websites. The goal is to enable users to access content and functionality accessible through rendered UIs by ``talking to websites'' instead of by operating 
 the graphical UI using keyboard and mouse. In this paper, we describe the foundations of our approach 
 and show how to generate a chatbot out of a website equipped with simple, bot-specific HTML annotations. 
 The chatbot mediates between the user and the website, operates its graphical UI on behalf of the user, and 
