--- a/template1/project.html
+++ b/template1/project.html
@@ -17,7 +17,7 @@
     <!-- Page Content -->
     
       <!-- Navigation bar -->
-    <div class="container" style="background-color: white;">
+    <div class="container" style="background-color: white; min-height: 100vh">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container">
             <div class="collapse navbar-collapse" id="navbarResponsive">
