--- a/template1/index.html
+++ b/template1/index.html
@@ -73,7 +73,7 @@ middleware, and the implementation of a demo able to deliver conversational web 
     <h3 class="my-3">List of Papers</h3>
     <div class="row">
       <div class="col">
-          <p>P. Cittò, M. Baez, F. Daniel. Automatic Generation of Chatbots for Conversational Web Browsing. Submitted to ICWE 2020.</p>
+          <p>P. Chittò, M. Baez, F. Daniel. Automatic Generation of Chatbots for Conversational Web Browsing. Submitted to ICWE 2020.</p>
       </div>
     </div>
 
