--- a/template1/project.html
+++ b/template1/project.html
@@ -55,9 +55,12 @@
     
       </div>
       <!-- /.row -->
-
+  
     </div>
     <!-- /.container -->
+    <hr>
+    <p class="text-center text-muted">Simple demo website accompanying the ICWE 2020 submission "Automatic Generation of Chatbots for Conversational Web Browsing" by Pietro Chittò, Marcos Baez and Florian Daniel. </p>  
+
   
     <!--bootstrap script-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
