added intent for home page

--- a/project.html
+++ b/project.html
@@ -7,7 +7,7 @@
 	<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame. Remove this if you use the .htaccess -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Bot Navigator - Prgresses</title>
+	<title>Progress</title>
 	<meta name="description" content="In this page there are the progresses of the project ordered in a chronological
 	order" />
 	<meta name="author" content="Pietro Chittò" />
@@ -23,8 +23,8 @@
 	</div>
 
 	<p id="navigation">
-			<a href="index.html">Home</a> |
-			<a bot-intent="progress" bot-intent-desc="Tell you the phases of the project" bot-type="link" bot-keys="phases, steps, progress" href="project.html?">Project progress</a> |
+			<a bot-intent="home" bot-intent-desc="Tell you some information about the papers" bot-type="link" bot-keys="paper, papers, article, articles" href="index.html">Home</a> |
+			<a href="project.html?">Project progress</a> |
 			<a bot-intent="about" bot-intent-desc="Tell you some information about the researchers involved" bot-type="link" bot-keys="researchers, authors, contributors, team members" href="researcher.html">About us</a>
 	</p>
 
